src/tests/fixtures/typename/PropertySignatureTypenameMissingType.ts.expected
-----------------
INPUT
----------------- 
/** @GQLType */
export class User implements IPerson {
  __typename;
  /** @GQLField */
  name: string;
}

/** @GQLInterface */
export interface IPerson {
  /** @GQLField */
  name: string;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/typename/PropertySignatureTypenameMissingType.ts:3:3 - error: Expected `__typename` property to have an initializer or a string literal type. For example: `__typename = "MyType"` or `__typename: "MyType";`.

3   __typename;
    ~~~~~~~~~~
